--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 html {
     height: 100%;
+    background-color: black;
+    color: white;
 }
 
 body {
@@ -16,4 +18,7 @@ a {
 .social-image{
     width: 30px;
     margin: 15px;
+}
+.footer {
+    background-color: #f1c40f;
 }
