--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,17 @@ html {
 
 body {
     height: 100%;
-    
+    font-family: 'Roboto', sans-serif;
 }
 a {
     text-decoration: none;
+    color: #f1c40f;
 }
-
+a:visited {
+    color: #00ccff;
+}
 .main {
-    height: 100%;
+    display: flex;
 }
 .social-image{
     width: 30px;
@@ -21,4 +24,22 @@ a {
 }
 .footer {
     background-color: #f1c40f;
+}
+.social {
+    display: flex;
+    justify-content: space-around;
+}
+.header {
+    color: #f1c40f;
+    text-align: center;
+    margin: 20px;
+    font-size: 30px;
+}
+.navbar {
+    display: flex;
+    justify-content: space-around;
+}
+#logo {
+    height: 20%;
+    margin: 10px;
 }
