--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,11 @@ html {
 body {
     height: 100%;
     font-family: 'Roboto', sans-serif;
+    font-size: 23px;
 }
 a {
     text-decoration: none;
-    color: #f1c40f;
+    color: #00ccff;
 }
 a:visited {
     color: #00ccff;
@@ -24,6 +25,7 @@ a:visited {
 }
 .footer {
     background-color: #f1c40f;
+    font-size: 12px;
 }
 .social {
     display: flex;
