--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ html {
 body {
     height: 100%;
     font-family: 'Roboto', sans-serif;
-    font-size: 23px;
+    font-size: 35px;
 }
 a {
     text-decoration: none;
@@ -18,6 +18,8 @@ a:visited {
 }
 .main {
     display: flex;
+    justify-content: space-around;
+    min-height: 65%;
 }
 .social-image{
     width: 30px;
@@ -35,13 +37,34 @@ a:visited {
     color: #f1c40f;
     text-align: center;
     margin: 20px;
-    font-size: 30px;
+    font-size: 60px;
 }
 .navbar {
     display: flex;
     justify-content: space-around;
+    border: 3px solid #f1c40f;
+    margin: 5px;
 }
 #logo {
     height: 20%;
     margin: 10px;
+}
+.gallery {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.thumbnail-image{
+    display: flex;
+    height: 400px;
+    margin: 50px;
+    justify-content: center;
+    border: 3px solid #f1c40f;
+}
+.thumbnail{
+    display: flex;
+    justify-content: center;
+}
+#textImage{
+    border: 0px solid black;
 }
